# nostop_area

./: CMakeLists.txt  package.xml
include/nostop_area/: CreateArea.h
launch/: Acquario.launch  CorridoioCentroPiaggio.launch  CorridoioING.launch  Studio.launch  empty_area.launch  medium.launch
msg/: Shape.msg
src/: CreateArea.cpp  SendArea.cpp
srv/: AreaData.srv
