<?xml version="1.0"?>
<package>
  <name>nostop_area</name>
  <version>0.0.0</version>
  <description>The nostop_area package</description>

  <maintainer email="nardi@mail.dm.unipi.it">simone</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>base_math</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_depend>message_runtime</build_depend>
  <run_depend>base_math</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>